--- a/components/nav-light.html
+++ b/components/nav-light.html
@@ -1,7 +1,7 @@
 <nav class="navbar nav__light navbar-expand-lg">
     <div class="container">
-        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar">
             <i class="fa-regular fa-bars"></i>
         </button>
         <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
@@ -77,3 +77,48 @@
 </nav>
 <!-- header bubbles -->
 <img src="../img/hero-bubbles-white.png" alt="" class="header__bubbles">
+
+<script>
+
+    // Prevent closing from click inside dropdown
+    document.querySelectorAll(".dropdown-menu").forEach(function (element) {
+        element.addEventListener("click", function (e) {
+            e.stopPropagation();
+        });
+    });
+    // make it as accordion for smaller screens
+    console.log('fsdfs');
+    if (window.innerWidth < 992) {
+        // close all inner dropdowns when parent is closed
+        document.querySelectorAll(".navbar .dropdown").forEach(function (everydropdown) {
+            everydropdown.addEventListener(
+                "hidden.bs.dropdown",
+                function () {
+                    // after dropdown is hidden, then find all submenus
+                    this.querySelectorAll(".submenu").forEach(function (
+                        everysubmenu
+                    ) {
+                        // hide every submenu as well
+                        everysubmenu.style.display = "none";
+                    });
+                }
+            );
+        });
+        document.querySelectorAll(".dropdown-menu a").forEach(function (element) {
+            element.addEventListener("click", function (e) {
+                let nextEl = this.nextElementSibling;
+                console.log(nextEl);
+                if (nextEl && nextEl.classList.contains("submenu")) {
+                    // prevent opening link if link needs to open dropdown
+                    e.preventDefault();
+                    if (nextEl.style.display == "block") {
+                        nextEl.style.display = "none";
+                    } else {
+                        nextEl.style.display = "block";
+                    }
+                }
+            });
+        });
+    }
+
+</script>
