--- a/components/nav.css
+++ b/components/nav.css
@@ -19,7 +19,8 @@
     justify-content: space-between;
     column-gap: 15px;
 }
-.nav__btn, .nav_menu_btn {
+.nav__btn,
+.nav_menu_btn {
     height: 44px;
     border-radius: 6px;
     background-color: #fff;
@@ -32,8 +33,11 @@
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: transparent;
     --bs-btn-active-border-color: #fff;
+    display: flex;
+    align-items: center;
 }
-.nav__light .nav__btn, .nav__light .nav_menu_btn {
+.nav__light .nav__btn,
+.nav__light .nav_menu_btn {
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #f6335b;
     --bs-btn-hover-border-color: #f6335b;
@@ -44,26 +48,27 @@
 .navbar-nav {
     column-gap: 32px;
 }
-.nav-link {
+.navbar .nav-link {
     --bs-nav-link-color: #fff;
 }
-.nav-link:hover,
-.nav-link:focus {
+.navbar .nav-link:hover,
+.navbar .nav-link:focus {
     color: #eee;
 }
 .nav__light .nav-link {
     color: var(--black);
 }
-.nav__light .nav-link:hover {
+.nav__light .nav-link:hover,
+.nav__light .nav-link:focus {
     color: #000;
 }
-.offcanvas .dropdown-item{
+.offcanvas .dropdown-item {
     --bs-dropdown-link-active-bg: var(--secondary);
 }
-.nav-item {
+.navbar .nav-item {
     position: relative;
 }
-.nav-item::before {
+.navbar .nav-item::before {
     position: absolute;
     content: "";
     transition: 0.3s;
@@ -75,7 +80,7 @@
 .nav__light .nav-item::before {
     background-color: var(--black);
 }
-.nav-item:hover::before {
+.navbar .nav-item:hover::before {
     width: 100%;
 }
 .header__red .header__bubbles {
@@ -117,7 +122,7 @@
 }
 .offcanvas {
     --bs-offcanvas-width: 350px;
-    transition: transform .2s;
+    transition: transform 0.2s;
     max-width: 100vw;
 }
 
@@ -162,6 +167,10 @@
     }
     .offcanvas .nav-link {
         color: var(--black);
+    }
+    .offcanvas .nav-link:hover,
+    .offcanvas .nav-link:focus {
+        color: #000;
     }
     .offcanvas .nav-item {
         --bs-nav-link-padding-y: 15px;
