--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg mb-3">
     <div class="container">
-        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar">
             <i class="fa-regular fa-bars"></i>
         </button>
         <a class="navbar-brand" href="/"><img src="../img/icon/logo-white.png" alt=""></a>
@@ -66,9 +66,9 @@
             <a href="../pages/completed_orders.html" type="button" class="btn nav__btn btn__square me-2">
                 <i class="fa-regular fa-user"></i>
             </a>
-            <button type="button" class="btn nav__btn">
+            <a href="#" type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
-            </button>
+            </a>
             <!-- <button type="button" class="btn nav__btn btn__square">
                 <i class="fa-regular fa-arrow-right-from-bracket"></i>
             </button> -->
@@ -77,12 +77,8 @@
 </nav>
 
 <script>
-    //	window.addEventListener("resize", function() {
-    //		"use strict"; window.location.reload();
-    //	});
 
-    // document.addEventListener("DOMContentLoaded", function () {
-    /////// Prevent closing from click inside dropdown
+    // Prevent closing from click inside dropdown
     document.querySelectorAll(".dropdown-menu").forEach(function (element) {
         element.addEventListener("click", function (e) {
             e.stopPropagation();
@@ -91,40 +87,35 @@
     // make it as accordion for smaller screens
     if (window.innerWidth < 992) {
         // close all inner dropdowns when parent is closed
-        document
-            .querySelectorAll(".navbar .dropdown")
-            .forEach(function (everydropdown) {
-                everydropdown.addEventListener(
-                    "hidden.bs.dropdown",
-                    function () {
-                        // after dropdown is hidden, then find all submenus
-                        this.querySelectorAll(".submenu").forEach(function (
-                            everysubmenu
-                        ) {
-                            // hide every submenu as well
-                            everysubmenu.style.display = "none";
-                        });
+        document.querySelectorAll(".navbar .dropdown").forEach(function (everydropdown) {
+            everydropdown.addEventListener(
+                "hidden.bs.dropdown",
+                function () {
+                    // after dropdown is hidden, then find all submenus
+                    this.querySelectorAll(".submenu").forEach(function (
+                        everysubmenu
+                    ) {
+                        // hide every submenu as well
+                        everysubmenu.style.display = "none";
+                    });
+                }
+            );
+        });
+        document.querySelectorAll(".dropdown-menu a").forEach(function (element) {
+            element.addEventListener("click", function (e) {
+                let nextEl = this.nextElementSibling;
+                console.log(nextEl);
+                if (nextEl && nextEl.classList.contains("submenu")) {
+                    // prevent opening link if link needs to open dropdown
+                    e.preventDefault();
+                    if (nextEl.style.display == "block") {
+                        nextEl.style.display = "none";
+                    } else {
+                        nextEl.style.display = "block";
                     }
-                );
+                }
             });
-        document
-            .querySelectorAll(".dropdown-menu a")
-            .forEach(function (element) {
-                element.addEventListener("click", function (e) {
-                    let nextEl = this.nextElementSibling;
-                    console.log(nextEl);
-                    if (nextEl && nextEl.classList.contains("submenu")) {
-                        // prevent opening link if link needs to open dropdown
-                        e.preventDefault();
-                        if (nextEl.style.display == "block") {
-                            nextEl.style.display = "none";
-                        } else {
-                            nextEl.style.display = "block";
-                        }
-                    }
-                });
-            });
+        });
     }
-    // });
 
 </script>
