feat:create login,register and contacts page

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg mb-3">
     <div class="container">
-        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar">
             <i class="fa-regular fa-bars"></i>
         </button>
         <a class="navbar-brand" href="/"><img src="../img/icon/logo-white.png" alt=""></a>
@@ -57,21 +57,18 @@
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
+                        <a class="nav-link" href="../pages/contact.html">Contacts</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="nav__actions">
-            <a href="../pages/completed_orders.html" type="button" class="btn nav__btn btn__square me-2">
+            <a href="../pages/processing_orders.html" type="button" class="btn nav__btn btn__square me-2">
                 <i class="fa-regular fa-user"></i>
             </a>
             <button type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
             </button>
-            <!-- <button type="button" class="btn nav__btn btn__square">
-                <i class="fa-regular fa-arrow-right-from-bracket"></i>
-            </button> -->
         </div>
     </div>
 </nav>
