--- a/components/nav.html
+++ b/components/nav.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="../pages/faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/contact.html">Contacts</a>
