--- a/css/const.css
+++ b/css/const.css
@@ -67,22 +67,110 @@ a:hover {
 .splide__arrow svg {
     fill: var(--black) !important;
 }
-.between_center{
+.between_center {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+.card__price {
+    position: absolute;
+    top: -60px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(41, 45, 51, 0.05);
+    border-radius: 6px;
+    padding: 8px;
+}
+.card_product_price {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--primary);
+    margin: 0;
+}
+.card_price_point {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 30px;
+    color: var(--primary);
+    transform: translate(-4px, -4px);
+}
+
+.products__content {
+    margin-top: 110px;
+    margin-bottom: 60px;
+}
+.products_content_header,
+.products_content_header_blog {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+.products_content_header_blog {
+    gap: 10px 70px;
+    margin-bottom: 0;
+}
+.products__title {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 83px;
+    color: var(--black);
+    margin-right: 20px;
+}
+.products_content_header .badge {
+    background: var(--primary);
+    border-radius: 6px;
+    font-family: "Manrope";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 3px 22px;
+    cursor: default;
+}
+.products_content_header_text {
+    font-family: "Manrope";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--black);
+}
+.products_filter_btn {
+    background-color: #fff;
+    color: var(--primary);
+}
+
+@media (max-width: 768px) {
+    .products__title {
+        font-size: 48px;
+    }
+    .products__content {
+        margin: 30px 0;
+    }
+}
 @media (max-width: 576px) {
-    .splide__arrow{
+    .splide__arrow {
         width: 45px !important;
         height: 45px !important;
         border-radius: 15px !important;
     }
+    .products__title {
+        font-size: 36px;
+    }
 }
 @media (max-width: 425px) {
-    .splide__arrow{
+    .splide__arrow {
         width: 36px !important;
         height: 36px !important;
         border-radius: 10px !important;
+    }
+    .products__content {
+        margin-top: 20px;
     }
 }
