--- a/components/nav.html
+++ b/components/nav.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#">Tools</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Guides</a>
+                        <a class="nav-link" href="../pages/guides.html">Guides</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog</a>
