--- a/components/nav.html
+++ b/components/nav.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tools</a>
+                        <a class="nav-link" href="../pages/tools.html">Tools</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/guides.html">Guides</a>
