--- a/css/const.css
+++ b/css/const.css
@@ -124,6 +124,13 @@ a:hover {
     color: var(--black);
     margin-right: 20px;
 }
+.products_header_title {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--black);
+}
 .products_content_header .badge {
     background: var(--primary);
     border-radius: 6px;
@@ -162,6 +169,9 @@ a:hover {
     }
     .products__title {
         font-size: 36px;
+    }
+    .card_product_price{
+        font-size: 18px;
     }
 }
 @media (max-width: 425px) {
