--- a/components/footer.html
+++ b/components/footer.html
@@ -3,7 +3,7 @@
         <div class="footer__content">
             <div class="footer__about">
                 <div class="footer__logos">
-                    <img src="../img/icon/logo-white.png" alt="">
+                    <img src="../img/icon/logo-white.png" alt="" class="site__logo">
                     <img src="../img/icon/fido.png" alt="">
                 </div>
                 <p class="footer_about_text">
@@ -73,11 +73,11 @@
                     <p class="footer_contact_text">La Voie-Creuse 3B, 1202 Geneva, SWITZERLAND</p>
                     <a href="mailto:info@token2.com" class="footer_contact_link">
                         info@token2.com
-                        <i class="fa-regular fa-right-long ms-2"></i>
+                        <i class="fa-regular fa-arrow-right-long ms-2"></i>
                     </a>
                     <a href="#" class="footer_contact_link">
                         Driving derections
-                        <i class="fa-regular fa-right-long ms-2"></i>
+                        <i class="fa-regular fa-arrow-right-long ms-2"></i>
                     </a>
                 </div>
             </div>
@@ -109,11 +109,11 @@
             <div class="footer_terms_blog">
                 <a href="#" class="footer_contact_link">
                     Privacy policy
-                    <i class="fa-regular fa-right-long ms-2"></i>
+                    <i class="fa-regular fa-arrow-right-long ms-2"></i>
                 </a>
                 <a href="#" class="footer_contact_link">
                     Terms of us
-                    <i class="fa-regular fa-right-long ms-2"></i>
+                    <i class="fa-regular fa-arrow-right-long ms-2"></i>
                 </a>
             </div>
             <p class="footer_terms_text">
