--- a/components/nav.html
+++ b/components/nav.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="../pages/guides.html">Guides</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/faq.html">FAQ</a>
@@ -68,7 +68,7 @@
             <a href="../pages/processing_orders.html" type="button" class="btn nav__btn btn__square me-2">
                 <i class="fa-regular fa-user"></i>
             </a>
-            <a href="#" type="button" class="btn nav__btn">
+            <a href="../pages/checkout.html" type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
             </a>
             <!-- <button type="button" class="btn nav__btn btn__square">
