--- a/css/login.css
+++ b/css/login.css
@@ -27,7 +27,7 @@
     color: white;
 }
 
-@media (min-width:1000px) {
+@media (min-width: 1000px) {
     .header__red {
         height: 700px;
     }
@@ -35,19 +35,27 @@
 
 .bg-blog {
     position: relative;
-    background-color: #FFFBE7;
+    background-color: #fffbe7;
     border-radius: 10px;
-    color: #87744F;
-    filter: drop-shadow(0 0 0.1rem #87744F);
+    color: #87744f;
+    filter: drop-shadow(0 0 0.1rem #87744f);
 }
 
 .bg-blog::after {
     position: absolute;
     bottom: -20px;
     right: 45px;
-    background-color: #FFFBE7;
+    background-color: #fffbe7;
     content: "";
     width: 50px;
     height: 40px;
     border-radius: 50%;
+}
+.contact__input {
+    font-family: "Open Sans";
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 15px 25px;
+    height: 54px;
 }
