fixed header bugs

--- a/components/nav-light.html
+++ b/components/nav-light.html
@@ -47,30 +47,30 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tools</a>
+                        <a class="nav-link" href="../pages/tools.html">Tools</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Guides</a>
+                        <a class="nav-link" href="../pages/guides.html">Guides</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="../pages/faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
+                        <a class="nav-link" href="../pages/contact.html">Contacts</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="nav__actions">
-            <button type="button" class="btn nav__btn btn__square me-2">
+            <a href="../pages/processing_orders.html" type="button" class="btn nav__btn btn__square me-2">
                 <i class="fa-regular fa-user"></i>
-            </button>
-            <button type="button" class="btn nav__btn">
+            </a>
+            <a href="../pages/checkout.html" type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
-            </button>
+            </a>
             <!-- <button type="button" class="btn nav__btn btn__square">
                 <i class="fa-regular fa-arrow-right-from-bracket"></i>
             </button> -->
