--- a/main.css
+++ b/main.css
@@ -1,16 +1,15 @@
-@import url('css/const.css');
-@import url('components/nav.css');
-@import url('components/subscribe.css');
-@import url('components/footer.css');
+@import url("css/const.css");
+@import url("components/nav.css");
+@import url("components/subscribe.css");
+@import url("components/footer.css");
 
 a {
     color: inherit;
 }
-
 .active-link {
     padding: 7px 27px;
     background-color: white;
-    color: #F23058;
+    color: #f23058;
     border-radius: 6px;
 }
 
@@ -19,10 +18,9 @@ a {
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    gap: 10px 20px;
+    gap: 20px;
 }
-
-.tabs>li {
+.tabs > li {
     cursor: pointer;
 }
 
@@ -33,45 +31,4 @@ a {
 .mt-encriment {
     position: relative;
     z-index: 1;
-    margin-top: -350px;
-}
-
-/* @media (max-width:1600px) {
-    .mt-encriment {
-        margin-top: -300px;
-    }
-}
-@media (max-width:1350px) {
-    .mt-encriment {
-        margin-top: -260px;
-    }
-} */
-@media (max-width:1200px) {
-    .mt-encriment {
-        margin-top: -330px;
-    }
-}
-
-@media (max-width:980px) {
-    .mt-encriment {
-        margin-top: -430px;
-    }
-}
-
-@media (max-width:440px) {
-    .mt-encriment {
-        margin-top: -350px;
-    }
-}
-
-@media (max-width:380px) {
-    .mt-encriment {
-        margin-top: -300px;
-    }
-}
-
-@media (max-width:340px) {
-    .mt-encriment {
-        margin-top: -180px;
-    }
 }
