--- a/main.css
+++ b/main.css
@@ -32,3 +32,20 @@ a {
     position: relative;
     z-index: 1;
 }
+
+.contact__input {
+    font-family: "Open Sans";
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    padding: 15px 25px;
+    height: 54px;
+}
+.contact__btn{
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+    height: 44px;
+    padding: 10px 14px;
+}
