--- a/css/registry.css
+++ b/css/registry.css
@@ -27,11 +27,11 @@
     background-color: #fff;
 }
 
-.header-bg{
+.header-bg {
     height: 100%;
 }
 
-@media (max-width:990px) {
+@media (max-width: 990px) {
     form {
         order: 2;
     }
@@ -40,20 +40,25 @@
         order: 1;
     }
 }
+@media (max-width: 576px) {
+    .reg_btn_item{
+        width: 100% !important;
+    }
+}
 
 .bg-blog {
     position: relative;
-    background-color: #FFFBE7;
+    background-color: #fffbe7;
     border-radius: 10px;
-    color: #87744F;
-    filter: drop-shadow(0 0 0.1rem #87744F);
+    color: #87744f;
+    filter: drop-shadow(0 0 0.1rem #87744f);
 }
 
 .bg-blog::after {
     position: absolute;
     bottom: -20px;
     right: 45px;
-    background-color: #FFFBE7;
+    background-color: #fffbe7;
     content: "";
     width: 50px;
     height: 40px;
