--- a/main.css
+++ b/main.css
@@ -32,6 +32,9 @@ a {
     position: relative;
     z-index: 1;
 }
+.form-control::placeholder {
+    color: white;
+}
 
 .contact__input {
     font-family: "Open Sans";
@@ -40,12 +43,26 @@ a {
     line-height: 24px;
     padding: 15px 25px;
     height: 54px;
+    box-shadow: none !important;
+    border-color: #fff !important;
 }
 .contact__btn{
-    font-family: "Open Sans";
-    font-size: 14px;
-    font-weight: 600;
+    font-family: "Manrope";
+    font-size: 16px;
+    font-weight: 700;
     line-height: 24px;
     height: 44px;
-    padding: 10px 14px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+@media (max-width: 992px) {
+    .header-bg {
+        min-height: 100vh;
+        height: 100%;
+    }
+}
+@media (max-width: 576px) {
+    .contact__input {
+        height: 44px;
+    }
 }
